# GameNative-Performance

./: .gitignore  .gitmodules  README.md  Summary.txt  local.properties  modified.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: box64_env_vars.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/extras/: evshim.c  vulkan.c
app/src/main/cpp/winlator/: alsa_client.c  evshim.c  vulkan.c
app/src/main/res/drawable/: button_neutral.xml  button_neutral_vector.xml  button_positive.xml  button_positive_vector.xml  content_dialog_background.xml  ic_input_kbd_0.xml  ic_input_kbd_1.xml  ic_input_kbd_2.xml  ic_input_kbd_3.xml  ic_input_kbd_4.xml  ic_input_kbd_5.xml  ic_input_kbd_6.xml  ic_input_kbd_7.xml  ic_input_kbd_8.xml  ic_input_kbd_9.xml  ic_input_kbd_a.xml  ic_input_kbd_alt.xml  ic_input_kbd_any.xml  ic_input_kbd_apostrophe.xml  ic_input_kbd_arrow_down.xml  ic_input_kbd_arrow_left.xml  ic_input_kbd_arrow_right.xml  ic_input_kbd_arrow_up.xml  ic_input_kbd_arrows.xml  ic_input_kbd_arrows_down.xml  ic_input_kbd_arrows_horizontal.xml  ic_input_kbd_arrows_left.xml  ic_input_kbd_arrows_none.xml  ic_input_kbd_arrows_right.xml  ic_input_kbd_arrows_up.xml  ic_input_kbd_arrows_vertical.xml  ic_input_kbd_asterisk.xml  ic_input_kbd_b.xml  ic_input_kbd_backspace.xml  ic_input_kbd_backspace_icon.xml  ic_input_kbd_backspace_icon_alternative.xml  ic_input_kbd_bracket_close.xml  ic_input_kbd_bracket_greater.xml  (+192 more)
app/src/main/res/drawable-anydpi/: ic_notification.xml
logs/: app_logs_2026-02-13_13-09-56.txt  wine_debug.log.txt
(+155 files in other folders)
